tests/errors/sem.invalid-type.len.or
main :: () -> void {
    x := 10;
    len(x);
};
